--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -32,7 +32,7 @@
 			<h2>Inicio de sesi&oacute;n</h2>
 			<form name="Login">
 				<label> Usuario:</label>
-				<input type="text">
+				<input type="text"> HOLAAA
 					
 				<label> Contraseña:</label>
 				<input type="password">
