Ready para el CSS

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 	<head >
 		<meta charset="utf-8">
@@ -28,10 +28,10 @@
 
 		<section>
 			<h2>Inicio</h2>
-			<form name="busqueda">
+			<form name="busqueda" action="res_busqueda.html">
 				<input type="search">
+                <input type="submit" name="Enviar">
 			</form>
-			<button>Buscar</button>
 
 			<article>
 				<p>Autor</p>
