--- a/res_busqueda.html
+++ b/res_busqueda.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 
 	<head >
@@ -22,17 +22,15 @@
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="busqueda.html">B&uacute;squeda</a></li>
-				<li><a href="registro.html">Registro</a></li>
-				<li><a href="inicio_sesion.html">Iniciar sesi&oacute;n</a></li>
 			</ul>
 		</nav>
 
 		<section>
 			<h2>Resultado de b&uacute;squeda</h2>
-			<form name="busqueda">
-				<input type="search">
-			</form>
-			<button>Buscar</button>
+            <form name="busqueda" action="res_busqueda.html">
+                <input type="search">
+                <input type="submit" name="Enviar">
+            </form>
 
 			<article>
 				<p>T&iacute;tulo de la foto</p>	
