--- a/res_solic_album.html
+++ b/res_solic_album.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="es">
 
 	<head >
@@ -23,8 +23,6 @@
 			<ul>
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="busqueda.html">B&uacute;squeda</a></li>
-				<li><a href="registro.html">Registro</a></li>
-				<li><a href="inicio_sesion.html">Iniciar sesi&oacute;n</a></li>
 			</ul>
 		</nav>
 
