--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -6,8 +6,8 @@
 		<meta name = "description" content="Web de fotos">
 		<title>Fotos</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
-
 
 	<body>
 		<header>
@@ -26,7 +26,7 @@
 			</ul>
 		</nav>
 
-		<section>
+		<section class="formularios">
 			<h2>Inicio de sesi&oacute;n</h2>
 			<form name="Login" action="menu_user_logeado.html">
 				<label for="usu"> Usuario:</label>
