--- a/registro.html
+++ b/registro.html
@@ -6,6 +6,7 @@
 		<meta name = "description" content="Web de fotos">
 		<title>Fotos</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
 
 
@@ -30,7 +31,7 @@
 
 		<section>
 			<h2>Registro</h2>
-			<form name="registro" action="index.html">
+			<form name="registro" action="index.html" id="form" class="topBefore">
 				<label for="usu"> Nombre de usuario:</label>
 				<input type="text" id="usu" name="usu" required>
 					
