CSS Header+Nav+Footer completos

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<body>
 		<header>
 			<figure> 
-				<a title="Logotipo" href="index.html"><img src="logo.png" width="125" height="125" alt="Logotipo de la web" ></a>
+				<a title="Logotipo" href="index.html"><img src="logo.png" width="180" height="200" alt="Logotipo de la web" ></a>
 			</figure>
 			<h1>PI - Pictures & images</h1>
 		</header>
@@ -23,21 +23,20 @@
 				<li><a class="enlace" href="registro.html">Registro</a></li>
 				<li><a class="enlace" href="inicio_sesion.html">Iniciar sesi&oacute;n</a></li>
 			</ul>
+			<form name="busqueda" class="buscador" action="res_busqueda.html">
+				<input type="search" placeholder="Buscar">
+                <input class="puntero_mano" type="submit" name="Enviar">
+			</form>
 		</nav>
 
 		<section>
-			<form name="busqueda" class="buscador" action="res_busqueda.html">
-				<input type="search" placeholder="Buscar">
-                <input type="submit" name="Enviar">
-			</form>
-
 			<article>
 				<p>Autor</p>
 				<figure> 
 					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
 				</figure>	
 			</article>
-			
+			<div style="clear: both;"></div>
 
 			<article>
 				<p>Autor</p>
