forms+enlaces html y css

--- a/busqueda.html
+++ b/busqueda.html
@@ -6,6 +6,7 @@
 		<meta name = "description" content="Web de fotos">
 		<title>Fotos</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
 
 	<body>
@@ -25,7 +26,7 @@
 			</ul>
 		</nav>
 		
-		<section>
+		<section class="formulario_buscar">
 			<h2>B&uacute;squeda</h2>
 			<form name="busquedaPorCriterios" action="res_busqueda.html">
 				<label for="tit"> T&iacute;tulo</label>
