--- a/solic_album.html
+++ b/solic_album.html
@@ -6,6 +6,7 @@
 		<meta name = "description" content="Web de fotos">
 		<title>Fotos</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+		<link rel="stylesheet" type="text/css" href="estilo.css">
 	</head>
 
 
@@ -26,10 +27,10 @@
 			</ul>
 		</nav>
 
-		<section>
+		<section  class="formularios">
 			<h2>Solicita t&uacute; &aacute;lbum</h2>
 			
-			<table style="width:15%">
+			<table style="width:40%">
 				<tr>
 					<th>Concepto</th>
 					<th>Tarifa</th> 
