css menu usuario + arreglo paddings forms

--- a/menu_user_logeado.html
+++ b/menu_user_logeado.html
@@ -27,7 +27,7 @@
 			</ul>
 		</nav>
 
-		<section>
+		<section class="menu_user_logeado">
 			<h2>Men&uacute; de cuenta</h2>
 			<p><a href="">Modificar mis datos</a></p>
 			<p><a href="">Mis &aacute;lbumes</a></p>
