css detalle foto

--- a/detalle.html
+++ b/detalle.html
@@ -27,7 +27,7 @@
 			</ul>
 		</nav>
 
-		<section>
+		<section class="detalle">
 			<h2>Detalle de foto</h2>
             <form name="busqueda" action="res_busqueda.html">
                 <input type="search">
