CSS Header+Footer todas las paginas

--- a/registro.html
+++ b/registro.html
@@ -12,12 +12,10 @@
 
 	<body>
 		<header>
-			<div>
-				<h1>PI - Pictures & images</h1>
-				<figure> 
-					<a title="Logo" href="index.html"><img src="camaleon2.jpg" width="125" height="125" alt="Logotipo" ></a>
-				</figure>
-			</div>
+			<figure> 
+				<a title="Logotipo" href="index.html"><img src="logo.png" width="180" height="200" alt="Logotipo de la web" ></a>
+			</figure>
+			<h1>PI - Pictures & images</h1>
 		</header>
 
 		<nav>
@@ -27,6 +25,10 @@
 				<li><a href="registro.html">Registro</a></li>
 				<li><a href="inicio_sesion.html">Iniciar sesi&oacute;n</a></li>
 			</ul>
+			<form name="busqueda" class="buscador" action="res_busqueda.html">
+				<input type="search" placeholder="Buscar">
+                <input class="puntero_mano" type="submit" name="Enviar">
+			</form>
 		</nav>
 
 		<section class="formularios">
