ajustes css menu usuer logeado

--- a/menu_user_logeado.html
+++ b/menu_user_logeado.html
@@ -29,11 +29,13 @@
 
 		<section class="menu_user_logeado">
 			<h2>Men&uacute; de cuenta</h2>
-			<p><a href="">Modificar mis datos</a></p>
-			<p><a href="">Mis &aacute;lbumes</a></p>
-			<p><a href="">Crear &aacute;lbum</a></p>
-			<p><a href="solic_album.html">Solicitar &aacute;lbum</a></p>
-			<p><a href="">Darme de baja</a></p>
+			<ul>
+				<li><a href="">Modificar mis datos</a></li>
+				<li><a href="">Mis &aacute;lbumes</a></li>
+				<li><a href="">Crear &aacute;lbum</a></li>
+				<li><a href="solic_album.html">Solicitar &aacute;lbum</a></li>
+				<li><a href="">Darme de baja</a></li>
+			</ul>
 		</section>
 
 
