--- a/registro.html
+++ b/registro.html
@@ -12,10 +12,12 @@
 
 	<body>
 		<header>
-			<figure> 
-				<a title="Logotipo" href="index.html"><img src="logo.png" width="180" height="200" alt="Logotipo de la web" ></a>
-			</figure>
-			<h1>PI - Pictures & images</h1>
+			<div>
+				<h1>PI - Pictures & images</h1>
+				<figure> 
+					<a title="Logo" href="index.html"><img src="camaleon2.jpg" width="125" height="125" alt="Logotipo" ></a>
+				</figure>
+			</div>
 		</header>
 
 		<nav>
@@ -25,10 +27,6 @@
 				<li><a href="registro.html">Registro</a></li>
 				<li><a href="inicio_sesion.html">Iniciar sesi&oacute;n</a></li>
 			</ul>
-			<form name="busqueda" class="buscador" action="res_busqueda.html">
-				<input type="search" placeholder="Buscar">
-                <input class="puntero_mano" type="submit" name="Enviar">
-			</form>
 		</nav>
 
 		<section class="formularios">
