CSS de resp_solicitud_album

--- a/res_solic_album.html
+++ b/res_solic_album.html
@@ -29,7 +29,7 @@
 			</form>
 		</nav>
 
-		<section>
+		<section class="menu_user_logeado">
 			<h2>&Aacute;lbum solicitado</h2>
 			
 			<ul>
@@ -64,7 +64,7 @@
 				<li>Fecha de recepci&oacute;n del &aacute;lbum: 30/09/2018</li>
 			</ul>
 
-			<h4>Coste total del producto: 24 €</h4>
+			<h2>Coste total del producto: 24 €</h2>
 		</section>
 
 		<footer>
