--- a/solic_album.html
+++ b/solic_album.html
@@ -128,7 +128,7 @@
                 <label for="fecha">Fecha de recepci&oacute;n del &aacute;lbum:</label>
                 <input type="date" name="fecha" id="fecha" required>
 
-                <input type="submit" value="Enviar" name="Enviar">
+                <input class="puntero_mano" type="submit" value="Enviar" name="Enviar">
             </form>
 		</section>
 
