--- a/res_busqueda.html
+++ b/res_busqueda.html
@@ -30,45 +30,57 @@
 
 		<section>
             <h2>Resultado de la b&uacute;squeda:</h2>
-			<article>
-				<p>T&iacute;tulo de la foto</p>	
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>
-				<p>Fecha | Pa&iacute;s</p>
-			</article>
+            <div>
+				<article>
+					<p>T&iacute;tulo de la foto</p>	
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>
+					<footer>
+						<p>Fecha | Pa&iacute;s</p>
+					</footer>
+				</article>
 
-			<article>
-				<p>T&iacute;tulo de la foto</p>
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>
-				<p>Fecha | Pa&iacute;s</p>
-			</article>
+				<article>
+					<p>T&iacute;tulo de la foto</p>
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>
+					<footer>
+						<p>Fecha | Pa&iacute;s</p>
+					</footer>
+				</article>
 
-			<article>
-				<p>T&iacute;tulo de la foto</p>
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>
-				<p>Fecha | Pa&iacute;s</p>
-			</article>
+				<article>
+					<p>T&iacute;tulo de la foto</p>
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>
+					<footer>
+						<p>Fecha | Pa&iacute;s</p>
+					</footer>
+				</article>
 
-			<article>
-				<p>T&iacute;tulo de la foto</p>
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>
-				<p>Fecha | Pa&iacute;s</p>
-			</article>
-			
-			<article>
-				<p>T&iacute;tulo de la foto</p>
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>
-				<p>Fecha | Pa&iacute;s</p>
-			</article>
+				<article>
+					<p>T&iacute;tulo de la foto</p>
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>
+					<footer>
+						<p>Fecha | Pa&iacute;s</p>
+					</footer>
+				</article>
+				
+				<article>
+					<p>T&iacute;tulo de la foto</p>
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>
+					<footer>
+						<p>Fecha | Pa&iacute;s</p>
+					</footer>
+				</article>
+			</div>
 		</section>
 
 		<footer>
