--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
 		<nav>
 			<ul>
-				<li><a class="enlace" href="index.html">Inicio</a></li>
-				<li><a class="enlace" href="busqueda.html">B&uacute;squeda</a></li>
-				<li><a class="enlace" href="registro.html">Registro</a></li>
-				<li><a class="enlace" href="inicio_sesion.html">Iniciar sesi&oacute;n</a></li>
+				<li><a href="index.html">Inicio</a></li>
+				<li><a href="busqueda.html">B&uacute;squeda</a></li>
+				<li><a href="registro.html">Registro</a></li>
+				<li><a href="inicio_sesion.html">Iniciar sesi&oacute;n</a></li>
 			</ul>
 			<form name="busqueda" class="buscador" action="res_busqueda.html">
 				<input type="search" placeholder="Buscar">
@@ -30,41 +30,42 @@
 		</nav>
 
 		<section>
-			<article>
-				<p>Autor</p>
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>	
-			</article>
-			<div style="clear: both;"></div>
+			<div>
+				<article>
+					<p><a class="enlace" href=""> Autor</a></p>
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>	
+				</article>
 
-			<article>
-				<p>Autor</p>
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>	
-			</article>
+				<article>
+					<p><a class="enlace" href=""> Autor</a></p>
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>	
+				</article>
 			
-			<article>
-				<p>Autor</p>
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>	
-			</article>
+				<article>
+					<p><a class="enlace" href=""> Autor</a></p>
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>	
+				</article>
 			
-			<article>
-				<p>Autor</p>
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>	
-			</article>
-			
-			<article>
-				<p>Autor</p>
-				<figure> 
-					<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
-				</figure>	
-			</article>
+				<article>
+					<p><a class="enlace" href=""> Autor</a></p>
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>	
+				</article>
+
+				<article>
+					<p><a class="enlace" href=""> Autor</a></p>
+					<figure> 
+						<a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width="125" height="125"></a>
+					</figure>	
+				</article>
+			</div>
 		</section>
 
 		<footer>
