--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	</head>
 
 	<body>
-		<header>
+		<header id="header">
 			<figure> 
 				<a title="Logotipo" href="index.html"><img src="logo.png" width="180" height="200" alt="Logotipo de la web" ></a>
 			</figure>
