--- a/menu_user_logeado.html
+++ b/menu_user_logeado.html
@@ -36,7 +36,7 @@
 			<ul>
 				<li><a href="">Modificar mis datos</a></li>
 				<li><a href="">Mis &aacute;lbumes</a></li>
-				<li><a href="">Crear &aacute;lbum</a></li>
+				<li><a href="crear_album.html">Crear &aacute;lbum</a></li>
 				<li><a href="solic_album.html">Solicitar &aacute;lbum</a></li>
 				<li><a href="">Darme de baja</a></li>
 			</ul>
