P6 version supuestamente acabada

--- a/busqueda.html
+++ b/busqueda.html
@@ -22,7 +22,8 @@
 		<nav>
 			<ul>
 				<li><a class="enlace" href="index.html">Inicio</a></li>
-				<li><a class="enlace" href="busqueda.html">B&uacute;squeda</a></li>
+				<li><a href="registro.html">Registro</a></li>
+				<li><a href="inicio_sesion.html">Iniciar sesi&oacute;n</a></li>
 			</ul>
 			<form name="busqueda" class="buscador" action="res_busqueda.php">
 				<input type="search" placeholder="Buscar">
@@ -44,9 +45,10 @@
 
 				<label for="pais"> Pa&iacute;s:</label>
                 <select name="pais" id="pais">
-                    <option value="0">España</option>
-                    <option value="1">Francia</option>
-                    <option value="2">Alemania</option>
+                	<option value="0">Elegir</option>
+                    <option value="1">España</option>
+                    <option value="2">Francia</option>
+                    <option value="3">Alemania</option>
                 </select>
 
 				<input class="puntero_mano" type="submit" name="Enviar">
