--- a/solic_album.html
+++ b/solic_album.html
@@ -72,7 +72,7 @@
 				</tr>
 		    </table>
 			
-            <form action="res_solic_album.html">
+            <form action="res_solic_album.php" method="post">
                 <label for="nomb"> Nombre(*):</label>
                 <input type="text" name="nomb" id="nomb" title="M&aacute;ximo 200 caracteres." maxlength="200" required>
 
