--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 				<li><a href="registro.html">Registro</a></li>
 				<li><a href="inicio_sesion.html">Iniciar sesi&oacute;n</a></li>
 			</ul>
-			<form name="busqueda" class="buscador" action="res_busqueda.html">
+			<form name="busqueda" class="buscador" action="res_busqueda.php" method="post">
 				<input type="search" placeholder="Buscar">
                 <input class="puntero_mano" type="submit" name="Enviar">
 			</form>
@@ -37,33 +37,33 @@
                 <article>
                     <p><a class="enlace" href=""> Autor</a></p>
                     <figure>
-                        <a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
+                        <a title="Imagen temporal" href="detalle.php?id=1"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
                     </figure>
                 </article>
                 <article>
                     <p><a class="enlace" href=""> Autor</a></p>
                     <figure>
-                        <a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
-                    </figure>
-                </article>
-
-                <article>
-                    <p><a class="enlace" href=""> Autor</a></p>
-                    <figure>
-                        <a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
+                        <a title="Imagen temporal" href="detalle.php?id=2"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
                     </figure>
                 </article>
 
                 <article>
                     <p><a class="enlace" href=""> Autor</a></p>
                     <figure>
-                        <a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
+                        <a title="Imagen temporal" href="detalle.php?id=3"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
+                    </figure>
+                </article>
+
+                <article>
+                    <p><a class="enlace" href=""> Autor</a></p>
+                    <figure>
+                        <a title="Imagen temporal" href="detalle.php?id=4"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
                     </figure>
                 </article>
                 <article>
                     <p><a class="enlace" href=""> Autor</a></p>
                     <figure>
-                        <a title="Imagen temporal" href="detalle.html"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
+                        <a title="Imagen temporal" href="detalle.php?id=5"><img src="camaleon2.jpg" alt="Imagen temporal" width=100% height=100%></a>
                     </figure>
                 </article>
             </div>
