--- a/declaracion_accesibilidad.html
+++ b/declaracion_accesibilidad.html
@@ -14,7 +14,7 @@
 
 	<body>
 		<header id="header">
-			<figure> 
+			<figure>
 				<a title="Logotipo" href="index.html"><img src="logo.png" width="180" height="200" alt="Logotipo de la web" ></a>
 			</figure>
 			<h1>PI - Pictures & images</h1>
@@ -34,7 +34,7 @@
 		<section class="menu_user_logeado">
 			<h2>Accesibilidad</h2>
 			<p>Con respecto a la accesibilidad de la página cabe destacar que todas las imagenes que aparecen en ella vienen con una descripción alternativa, se ha tratado de utilizar un etiquetado lo más semántico posible. También se han utilizado combinaciones de color con alto contraste y un tamaño de letra ampliado para facilitar la lectura y visión general de la página además de un mayor tamaño en los formularios y una diferenciación a la hora de rellenar cada campo.</p>
-			<p>Para activar la oja de estilo se tiene que acceder al menú "Ver" de Mozilla Firefox, seleccionar la opción "Estilo de página" y el Estilo accesible.</p>
+			<p>Para activar la hoja de estilo se tiene que acceder al menú "Ver" de Mozilla Firefox, seleccionar la opción "Estilo de página" y el Estilo accesible.</p>
 		</section>
 
 		<footer>
