--- a/inicio_sesion.html
+++ b/inicio_sesion.html
@@ -13,7 +13,7 @@
 
 	<body>
 		<header id="header">
-			<figure> 
+			<figure>
 				<a title="Logotipo" href="index.html"><img src="logo.png" width="180" height="200" alt="Logotipo de la web" ></a>
 			</figure>
 			<h1>PI - Pictures & images</h1>
@@ -24,7 +24,7 @@
 				<li><a href="index.html">Inicio</a></li>
 				<li><a href="busqueda.html">B&uacute;squeda</a></li>
 			</ul>
-			<form name="busqueda" class="buscador" action="res_busqueda.html">
+			<form name="busqueda" class="buscador" action="res_busqueda.php" method="post">
 				<input type="search" placeholder="Buscar">
                 <input class="puntero_mano" type="submit" name="Enviar">
 			</form>
@@ -35,12 +35,12 @@
 			<form name="Login" action="control_acceso.php" method="post">
 				<label for="usu"> Usuario:</label>
 				<input type="text" id="usu" name="usu" required>
-					
+
 				<label for="contra"> Contraseña:</label>
 				<input type="password" id="contra" name="contra" required>
 
 				<input class="puntero_mano" type="submit" name="Enviar">
-			</form>	
+			</form>
 		</section>
 
 
